--- a/demo/src/app/nav-bar/nav-bar.component.html
+++ b/demo/src/app/nav-bar/nav-bar.component.html
@@ -1,19 +1,22 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bootstrap Angular Form Validation</a>
+      <a class="navbar-brand" href="#">ng-bootstrap-form-validation</a>
     </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a [routerLink]="['Reactive-Form-Demo']">Reactive Form Demo</a></li>
+        <li routerLinkActive="active"><a routerLink="/basic-example">Basic Example</a></li>
+        <li routerLinkActive="active"><a routerLink="/custom-errors">Custom Errors</a></li>
       </ul>
-    </div>
-  </div>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
