--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">ng-bootstrap-form-validation</a>
+      <a class="navbar-brand" href="https://github.com/third774/ng-bootstrap-form-validation" target="_blank">ng-bootstrap-form-validation</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
