--- a/src/app/basic-example/basic-example.component.html
+++ b/src/app/basic-example/basic-example.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-4">
-    <form [formGroup]="formGroup">
+  <div class="col-md-6 col-md-offset-3">
+    <form [formGroup]="formGroup" (validSubmit)="onSubmit()">
       <div class="form-group">
         <label class="control-label">Email</label>
         <input type="text" class="form-control" formControlName="Email">
@@ -12,17 +12,5 @@
       <button class="btn btn-default" type="button" (click)="onReset()">Reset</button>
       <button class="btn btn-primary pull-right" type="submit">Submit</button>
     </form>
-  </div>
-  <div class="col-md-8">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">basic-example.component.ts</h3>
-      </div>
-      <div class="panel-body">
-        <pre>
-          {{basicExampleComponentCode}}
-        </pre>
-      </div>
-    </div>
   </div>
 </div>
