--- a/src/app/custom-errors/custom-errors.component.html
+++ b/src/app/custom-errors/custom-errors.component.html
@@ -1,9 +1,13 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <form [formGroup]="formGroup" (submit)="onSubmit()">
-      <div class="form-group" [customErrorMessages]="customErrors">
-        <label class="control-label">Price</label>
-        <input type="number" class="form-control" formControlName="Price">
+    <form [formGroup]="formGroup" (validSubmit)="onSubmit()">
+      <div class="form-group" [customErrorMessages]="customErrorMessages">
+        <label class="control-label">Email</label>
+        <input type="text" class="form-control" formControlName="Email">
+      </div>
+      <div class="form-group">
+        <label class="control-label">Password</label>
+        <input type="password" class="form-control" formControlName="Password">
       </div>
       <button class="btn btn-default" type="button" (click)="onReset()">Reset</button>
       <button class="btn btn-primary pull-right" type="submit">Submit</button>
