--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container">
-  <app-default-errors-demo></app-default-errors-demo>
+  <router-outlet></router-outlet>
 </div>
