--- a/src/app/horizontal-form/horizontal-form.component.html
+++ b/src/app/horizontal-form/horizontal-form.component.html
@@ -3,12 +3,14 @@
     <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
     <div class="col-sm-10">
       <input formControlName="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
+      <ng-bs-form-errors for="email"></ng-bs-form-errors>
     </div>
   </div>
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
     <div class="col-sm-10">
       <input formControlName="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">
+      <ng-bs-form-errors for="password"></ng-bs-form-errors>
     </div>
   </div>
   <div class="form-group">
@@ -20,6 +22,19 @@
       </div>
     </div>
   </div>
+
+  <div class="panel panel-default">
+    <div class="panel-body" formGroupName="group">
+      <div class="form-group">
+        <label for="foo" class="col-sm-2 control-label">Foo</label>
+        <div class="col-sm-offset-2 col-sm-10">
+          <input id="foo" class="form-control" type="text" formControlName="foo">
+          <ng-bs-form-errors for="foo"></ng-bs-form-errors>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">Sign in</button>
