--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-nav-bar></app-nav-bar>
-
-<div class="container">
-  <app-default-errors-demo></app-default-errors-demo>
-</div>
+<router-outlet></router-outlet>
