--- a/src/app/bootstrap-four/bootstrap-four.component.html
+++ b/src/app/bootstrap-four/bootstrap-four.component.html
@@ -1,2 +1,4 @@
 <app-bootstrap-four-nav></app-bootstrap-four-nav>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
