--- a/src/app/bootstrap-four-basic/bootstrap-four-basic.component.html
+++ b/src/app/bootstrap-four-basic/bootstrap-four-basic.component.html
@@ -1,66 +1,54 @@
-<form class="needs-validation" novalidate>
+<form [formGroup]="this.formGroup" class="needs-validation" novalidate (validSubmit)="this.handleValidSubmit()">
   <div class="form-row">
-    <div class="col-md-4 mb-3">
+    <div class="col-md-4 mb-3 form-group">
       <label for="validationCustom01">First name</label>
-      <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
-      <div class="valid-feedback">
-        Looks good!
-      </div>
+      <input formControlName="firstName" type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark"
+        required>
     </div>
-    <div class="col-md-4 mb-3">
+    <div class="col-md-4 mb-3 form-group">
       <label for="validationCustom02">Last name</label>
-      <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
-      <div class="valid-feedback">
-        Looks good!
-      </div>
+      <input formControlName="lastName" type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto"
+        required>
     </div>
-    <div class="col-md-4 mb-3">
-      <label for="validationCustomUsername">Username</label>
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="inputGroupPrepend">@</span>
-        </div>
-        <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend"
-          required>
-        <div class="invalid-feedback">
-          Please choose a username.
-        </div>
-      </div>
+    <div class="col-md-4 mb-3 form-group">
+      <label for="validationCustomUsername">Email</label>
+      <input formControlName="email" type="email" class="form-control" id="validationCustomUsername" placeholder="Email" aria-describedby="inputGroupPrepend">
     </div>
   </div>
   <div class="form-row">
-    <div class="col-md-6 mb-3">
+    <div class="col-md-6 mb-3 form-group">
       <label for="validationCustom03">City</label>
-      <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
-      <div class="invalid-feedback">
-        Please provide a valid city.
-      </div>
+      <input formControlName="city" type="text" class="form-control" id="validationCustom03" placeholder="City" required>
     </div>
-    <div class="col-md-3 mb-3">
+    <div class="col-md-3 mb-3 form-group">
       <label for="validationCustom04">State</label>
-      <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
-      <div class="invalid-feedback">
-        Please provide a valid state.
-      </div>
+      <input formControlName="state" type="text" class="form-control" id="validationCustom04" placeholder="State" required>
     </div>
-    <div class="col-md-3 mb-3">
+    <div class="col-md-3 mb-3 form-group">
       <label for="validationCustom05">Zip</label>
-      <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
-      <div class="invalid-feedback">
-        Please provide a valid zip.
-      </div>
+      <input formControlName="zip" type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
     </div>
   </div>
   <div class="form-group">
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+      <input formControlName="agreeToTerms" class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
       <label class="form-check-label" for="invalidCheck">
         Agree to terms and conditions
       </label>
-      <div class="invalid-feedback">
-        You must agree before submitting.
-      </div>
     </div>
   </div>
+  <div class="form-group">
+    <label for="bestPet">What makes the best pet</label>
+    <div class="custom-control custom-radio">
+      <input formControlName="bestPet" type="radio" class="custom-control-input" value="cats" id="customControlValidation2" required>
+      <label class="custom-control-label" for="customControlValidation2">Cats</label>
+    </div>
+    <div class="custom-control custom-radio mb-3">
+      <input formControlName="bestPet" type="radio" class="custom-control-input" value="dogs" id="customControlValidation3" required>
+      <label class="custom-control-label" for="customControlValidation3">Dogs</label>
+    </div>
+    <bfv-messages></bfv-messages>
+  </div>
   <button class="btn btn-primary" type="submit">Submit form</button>
+  <button class="btn btn-secondary" (click)="this.handleReset()" type="button">Reset</button>
 </form>
