Set up nav links

--- a/src/app/bootstrap-three/bootstrap-three.component.html
+++ b/src/app/bootstrap-three/bootstrap-three.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
+<app-bootstrap-three-nav></app-bootstrap-three-nav>
 
 <div class="container">
   <app-default-errors-demo></app-default-errors-demo>
