--- a/src/app/bootstrap-four-nav/bootstrap-four-nav.component.html
+++ b/src/app/bootstrap-four-nav/bootstrap-four-nav.component.html
@@ -1,17 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">ng-bootstrap-form-validation</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home
-        <span class="sr-only">(current)</span>
-      </a>
-      <a class="nav-item nav-link" href="#">Features</a>
-      <a class="nav-item nav-link" href="#">Pricing</a>
-      <a class="nav-item nav-link disabled" href="#">Disabled</a>
+      <a class="nav-item nav-link" [routerLink]="['/bootstrap-3']" routerLinkActive="active">Bootstrap 3</a>
+      <a class="nav-item nav-link" [routerLink]="['/bootstrap-4', 'basic']" routerLinkActive="active">Bootstrap 4</a>
     </div>
   </div>
 </nav>
