Fixes #55 Upgrade to Angular 7
Fixed Unit Tests.
Fixed the prod build failure.

--- a/src/app/bootstrap-four/bootstrap-four-basic/bootstrap-four-basic.component.html
+++ b/src/app/bootstrap-four/bootstrap-four-basic/bootstrap-four-basic.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <ng-container formGroupName="phoneNumbers">
-    <div class="form-row" *ngFor="let control of this.formGroup.get('phoneNumbers').controls; let i = index" [formGroupName]="i">
+    <div class="form-row" *ngFor="let control of this.formGroup.get('phoneNumbers')['controls']; let i = index" [formGroupName]="i">
       <div class="col-12 mb-2">Phone Numbers</div>
       <div class="col-md-6 mb-3 form-group">
         <label for="validationCustom06">Type</label>
